objects/RequestChoice__c.object
<CustomObject>
    <description>This object stored all the request choice combinations with the associated role for each choice combination. Used as setup data in the API which is used by the request system.</description>
    <fields>
        <fullName>Business_Area__c</fullName>
        <description>The Business Area which is entered into the request system.</description>
        <inlineHelpText>The Business Area which is entered into the request system.</inlineHelpText>
        <label>Business Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The country which one chooses on the request system</description>
        <inlineHelpText>The country which one chooses on the request system</inlineHelpText>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>The division that is chosen in request.</description>
        <inlineHelpText>The division that is chosen in request.</inlineHelpText>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub__c</fullName>
        <description>The Hub the user chooses on the request system</description>
        <inlineHelpText>The Hub the user chooses on the request system</inlineHelpText>
        <label>Hub</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <label>Profile ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The Region which someone chooses in Request</description>
        <inlineHelpText>The Region which someone chooses in Request</inlineHelpText>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>The Team Role chosen on the request system.</description>
        <inlineHelpText>The Team Role chosen on the request system.</inlineHelpText>
        <label>Team Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>The Team which is selected in the request system</description>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsKnowledgeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine whether the role should inherit Knowledge User Permissions</description>
        <inlineHelpText>Checkbox to determine whether the role should inherit Knowledge User Permissions</inlineHelpText>
        <label>User Permissions Knowledge User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsSupportUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox which determines whether the role inherits Service Cloud functionality</description>
        <inlineHelpText>Checkbox which determines whether the role inherits Service Cloud functionality</inlineHelpText>
        <label>User Permissions Support User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserRoleId__c</fullName>
        <description>This field holds the role that will map to all the choices one picks on the request system</description>
        <inlineHelpText>This field holds the role that will map to all the choices one picks on the request system</inlineHelpText>
        <label>UserRoleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Request Choice</label>
    <nameField>
        <label>RequestChoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>